[package]
name = "_brr"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "bash runner for arw tools"
repository = "https://github.com/anthonwellsjo/brr"
keywords = ["lib", "bash", "arw", "arw_tools", "bash_life"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
