[package]
name = "arw_brr"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "bash runner for arw tools"
repository = "https://github.com/anthonwellsjo/brr"
keywords = ["lib", "bash", "arw", "arw_tools", "bash_life"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
dirs = "4.0.0"
sysinfo = "0.27.2"

